Fixes uppercase and symbol sync, desktop logo still off-center

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -10,6 +10,7 @@
     
   .navbar_logo{
     background-color: transparent;
+    text-align: center;
     .navbar-brand{
       margin-right: 0;
       padding: 0;
